+ Ticket #1617, Use MPC-HC's icon when registering the context menu entries
+ Ticket #1680, Add Greek translation
+ Ticket #2425, Improve the remember file/DVD position feature: when a file/DVD that was already
  in the list is reopened, it now goes at the top the list. This way files/DVDs that are often
  used will stay in the list instead of being inexorably pushed out of it.
+ Ticket #2647, Add .3ga to known formats
+ Ticket #2712, MPC Video Decoder: Add the ability to force the interlaced flag
* Updated FFmpeg (n0.8-15849-g5cd567c)
* Updated MediaInfoLib to v0.7.61
* Updated ZenLib to v0.4.28 r411
* Updated Little CMS to v2.4 (git c606462)
* Updated SoundTouch to v1.7.0 r160
* Updated Basque, Czech, French, German, Russian, Simplified Chinese, Slovak
  and Ukrainian translations
! MpaDecFilter: updated CMixer, avoid possible memory leaks
! API: CMD_PAUSE was acting as CMD_PLAY and vice versa
! MPEG Splitter: Fix parsing of some malformed TS files
! VSFilter (auto-loading version) wasn't loading on Windows 7
! Ticket #376, Fix subtitles when switching from animated subs to non-animated subs.
  The subtitles' timings were not correctly respected after switching from an
  animated subtitles track to a non-animated subtitles track.
! Ticket #1782, Correctly empty the "Recent" jump list when erasing the history
  and ensure that no item is added to Windows recent documents menu or to the
  "Recent" jump list when the history is disabled
! Ticket #2537, #2554, Fix "Attempted an unsupported operation" error in the
  Save dialogs on Vista and newer systems
! Ticket #2572, FLAC Source: Fix playback for some files
! Ticket #2619, FLV Splitter: PCM audio doesn't play
! Ticket #2673, MPEG Splitter: Fix playback for some TS files
! Ticket #2685, FLAC Source: Fix a crash with some corrupted file
! Ticket #2699, Avi Splitter: Fix a potential crash with PCM tracks
! Ticket #2703, Fix a crash that could happen when auto-loading some subtitles